# OpenStudio-Toolkit

./: .gitignore  ANTIGRAVITY.md  CLAUDE.md  CONTRIBUTING.md  README.md  [BCL] OpenStudio Measures - Measures.csv  api_analysis.json  bootstrap.py  extract_api_docs.py  pyproject.toml  test_output.osm  test_view_model.py  test_wizard.py
examples/: [Surfaces] Rename-Surfaces-Based-on-Space-Names.ipynb  cabana-60.osm  setup.py
notebooks/1_Model_Setup/: 1.1_Normalize_Space_Names.ipynb.ipynb  1.1_Rename_Surfaces_Based_on_Space_Names.ipynb  1.2_Rename_Surfaces_Based_on_Space_Names.ipynb  1.3_Rename_Subsurfaces_Based_on_Space_and_Surface_Names.ipynb  1.4_Set_Space_SurfaceArea_Height_Volume.ipynb  1.5_Copy_Subsurfaces_Geometry - Copy.ipynb  1.5_Copy_Subsurfaces_Geometry.ipynb
notebooks/2_Model_QA_QC/: 2.1_Calculate_WWR_by_Space.ipynb  2.1_Calculate_Window_to_Wall_Ratio_WWR.ipynb
notebooks/3_Simulation_Setup/: 3.1_Set_Output_Variables.ipynb
notebooks/4_Results_Analysis/: 4.1_Get_Timeseries_from_SQL.ipynb
osm_objects/: air_loops.py  building_stories.py  component_curves.py  constructions.py  hvac_components.py  hvac_sizing.py  loads.py  materials.py  schedules.py  space_types.py  spaces.py  subsurfaces.py  surfaces.py  thermal_zones.py  zone_hvac.py
src/openstudio_toolkit/: __init__.py
src/openstudio_toolkit/osm_objects/: _base.py  availability_managers.py  building.py  building_stories.py  building_units.py  component_curves.py  constructions.py  controllers.py  exterior_equipment.py  hvac_air_loops.py  hvac_components.py  hvac_sizing.py  hvac_zone.py  loads.py  materials.py  outputs.py  schedules.py  space_types.py  spaces.py  subsurfaces.py  surfaces.py  thermal_zones.py
src/openstudio_toolkit/resources/measures/AddOverhangsByProjectionFactor/: measure.rb  measure.xml
src/openstudio_toolkit/resources/measures/AddOverhangsByProjectionFactor/tests/: AddOverhangsByProjectionFactor_Test.rb
src/openstudio_toolkit/resources/measures/view_model/: README.md  measure.xml
src/openstudio_toolkit/schemas/: __init__.py  osm_objects.py  project.py  results.py
src/openstudio_toolkit/tasks/measures/: __init__.py  add_overhangs_by_projection_factor.py  apply_space_type_and_construction_set_wizard.py  create_view_model_html.py  hard_size_hvac.py
src/openstudio_toolkit/tasks/model_qa_qc/: calculate_wwr.py  calculate_wwr_by_space.py
src/openstudio_toolkit/tasks/model_setup/: __init__.py  assign_space_orientations.py  copy_subsurfaces_geometry.py  fix_dhw_connections.py  normalize_space_names.py  rename_subsurfaces_based_on_space_and_surface_names.py  rename_surfaces_based_on_space_names.py  set_space_surfacearea_height_volume.py  simplify_thermal_zoning.py
src/openstudio_toolkit/tasks/results_analysis/: get_timeseries_from_sql.py
src/openstudio_toolkit/tasks/simulation_setup/: set_output_variables.py
src/openstudio_toolkit/utils/: __init__.py  eplus_utils.py  excel_utils.py  helpers.py  measure_runner.py  notebook_helpers.py  notebook_setup.py  osm_utils.py
test_output/: workflow.osw
tests/: conftest.py  test_add_overhangs_by_projection_factor.py  test_base.py  test_hard_size_hvac.py  test_osm_objects.py  test_spaces.py
tests/output/: test_hard_size_hvac_result.osm
tests/test_schemas/: test_osm_objects.py  test_project.py  test_results.py
utils/: excel_utils.py  osm_utils.py
