
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openstudio_toolkit"
version = "0.1.0"
authors = [
  { name="Roberto Ruiz", email="roruizf@gmail.com" },
]
description = "A Python library for interacting with OpenStudio Models."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "pytest",
    "openpyxl"
]

[project.urls]
"Homepage" = "https://github.com/roruizf/OpenStudio-Toolkit"
"Bug Tracker" = "https://github.com/roruizf/OpenStudio-Toolkit/issues"
